#############################################################################
# Copyright 2017-2020 Lawrence Livermore National Security, LLC and other
# UMAP Project Developers. See the top-level LICENSE file for details.
#
# SPDX-License-Identifier: LGPL-2.1-only
#############################################################################
add_subdirectory(churn)
add_subdirectory(umap-sparsestore)
add_subdirectory(multi_thread)
add_subdirectory(flush_buffer)
add_subdirectory(variable_page)
add_subdirectory(adapt_page)
